--- a/.github/workflows/recu.yml
+++ b/.github/workflows/recu.yml
@@ -24,7 +24,7 @@ jobs:
              name: Login en Docker Hub
              uses: docker/login-action@v3
              with:
-               username: ${{ secrets.DOCKUSER }}
+               username: ${{ secrets.dockuser }}
                password: ${{ secrets.DOCKTOKEN }}
             -
              name: Build y push 
